--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./9.2-while_loop.js"></script>
-    <script src="./10.1.js"></script>
+
+    <script src="./xb1.js"></script>
     <title>Document</title>
 </head>
 
